# base64pp

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.in  LICENSE  README.md  azure-pipelines.yml  base64pp_8h.html  base64pp_8h__incl.map  base64pp_8h__incl.md5  base64pp_8h_source.html  base64pp__export_8h_source.html  conanfile.txt  dir_000000_000002.html  dir_8f1e2cb48d4636b9491806fc70223a58.html  dir_8f1e2cb48d4636b9491806fc70223a58_dep.map  dir_8f1e2cb48d4636b9491806fc70223a58_dep.md5  dir_90777ba914a98986a4896ddf92565168.html  dir_90777ba914a98986a4896ddf92565168_dep.map  dir_90777ba914a98986a4896ddf92565168_dep.md5  dir_c7b1b75b74a008d2b969f68d4c4b5df9.html  dir_c7b1b75b74a008d2b969f68d4c4b5df9_dep.map  dir_c7b1b75b74a008d2b969f68d4c4b5df9_dep.md5  files.html  graph_legend.html  index.html  namespacebase64pp.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
base64pp/: CMakeLists.txt  base64pp.cpp  base64pp.pc.in
base64pp/include/base64pp/: base64pp.h
conan/: conanfile.py
docker/: Dockerfile
scripts/: build_win_x64.ps1  build_x86-64.sh  cmake-install.ps1  cmake-install.sh  cpp-lint.sh  gather_cov.sh  shellcheck.sh  static-analysis.sh
scripts/helpers/: conan-install.ps1  conan-install.sh  install-dependencies.ps1
scripts/pipeline/: download_build.yml  ubuntu_build.yml  windows_build.yml
search/: all_0.js  all_1.js  all_2.js  files_0.js  namespaces_0.js  pages_0.js  searchdata.js
tests/: CMakeLists.txt  base64pp_tests.cpp
